# sica-webapp

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
server/: main.py  models.py
server/routes/: ImagesPredict.py
src/: app.rs  main.rs
src/components/: camera_frame.rs  header.rs  nav_bar.rs
src/pages/: camera_management.rs  capturing.rs  configuration.rs  home.rs  mod.rs
