[package]
name = "gun_detection"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    'Document',
    'Element',
    'Navigator', 
    'MediaDevices',
    'HtmlVideoElement',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'MediaStreamConstraints',
    'MediaStream',
    'CanvasRenderingContext2d',
    'console'
]}
yew = { version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
